--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@clerk/nextjs": "^5.6.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@hookform/resolvers": "^3.9.0",
+    "@mux/mux-node": "^8.8.0",
+    "@mux/mux-player-react": "^3.0.0",
     "@prisma/client": "^5.14.0",
     "@radix-ui/react-checkbox": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.1",
