--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-quill": "^2.0.0",
@@ -51,7 +52,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "uploadthing": "^7.0.2",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "5.0.0-rc.2"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.10",
