--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucide-react": "^0.441.0",
     "next": "^14.2.4",
     "next-themes": "^0.3.0",
+    "query-string": "^9.1.0",
     "react": "^18.3.1",
     "react-confetti": "^6.1.0",
     "react-dom": "^18.3.1",
