--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-quill": "^2.0.0",
+    "recharts": "^2.12.7",
     "server-only": "^0.0.1",
     "sonner": "^1.5.0",
     "stripe": "^16.12.0",
